--- a/app/stylesheets/profile/show.sass
+++ b/app/stylesheets/profile/show.sass
@@ -1,6 +1,4 @@
 @import 'environment'
-@import 'header_reset'
-@import 'accessible_headers/profile_show'
 
 .not-editing
   .show-if-editing
@@ -51,10 +49,21 @@
   td
     text-align: center
 
-#content h1, #content .h1
-  margin-bottom: 0
+#right-side .right-side-h2-border
+  color: $gray
+  border-bottom: solid 1px $borderColor
+  box-shadow: 0 1px 0 white
+  margin: $right_side_margin 0 0
+  overflow: hidden
 
-#content h2, #content .h2
+#content
+  .h1, .h2
+    line-height: 21px
+
+#content h1
+  margin: 0
+
+#content h2
   margin: 1em 0 0.5em 0
   color: $gray
 
